# ProjFinal-AlgGraf

./: pyproject.toml
back-end/: .gitignore  alembic.ini  main.py  pyproject.toml  run_scraper.py  verify_db.py
back-end/config/: settings.py
back-end/db/: db_models.py  engine.py  session.py
back-end/db/db_models/: link.py
back-end/db/models/: page.py
back-end/db/repositories/: page.py
back-end/migrations/: env.py
back-end/migrations/versions/: 112ea99078cd_add_pages_and_links_pages.py  e09200e715e5_remove_target_page_id_foreign_key.py
back-end/models/: graph_objects.py  link,py  page.py
back-end/routers/: api.py
back-end/scraper/: api_client.py  html_parser.py  protótipo.py  wiki_scraper.py
back-end/services/: graph_builder.py  page.py  pagerank.py  pathfinding.py
back-end/settings/: logging_setup.py
back-end/src/wiki_graph.egg-info/: PKG-INFO  requires.txt
back-end/tests/: test_api_client.py  test_html_parser.py  test_pagerank.py  test_scraper.py
back-end/utils/: clean.py
data-processing/: DTMPCA.ipynb
front-end/: README.md  angular.json  package-lock.json  package.json
front-end/src/: index.html  styles.css
front-end/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
front-end/src/app/components/graph-viewer/: graph-viewer.component.html  graph-viewer.component.scss  graph-viewer.component.ts
front-end/src/app/components/search-bar/: search-bar.component.html  search-bar.component.scss  search-bar.component.ts
front-end/src/app/mocks/: mock-backend.interceptor.ts
front-end/src/app/pages/graph/: graph.page.html  graph.page.scss  graph.page.ts
front-end/src/app/pages/home/: home.page.html  home.page.scss  home.page.ts
front-end/src/app/pages/pagerank/: pagerank.page.html  pagerank.page.scss  pagerank.page.ts
front-end/src/app/services/: graph.service.ts
src/: run_scraper.py  verify_db.py
src/app/db/models/: link.py  page.py
src/app/models/: graph_objects.py
src/app/scraper/: protótipo.py  wiki_scraper.py
src/app/services/: graph_builder.py  pagerank.py
src/app/tests/: test_pagerank.py  test_scraper.py
src/wiki_graph.egg-info/: SOURCES.txt
